<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="170dp"
            android:src="@drawable/bub_login"
            app:layout_constraintBottom_toTopOf="@id/background_mid"
            app:layout_constraintEnd_toStartOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="200dp"
            android:src="@drawable/bub_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/background_mid" />

        <ImageView
            android:id="@+id/background_mid"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:background="@drawable/logo2tiket"
            android:src="#CC0D739F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:src="@drawable/logo2tiket"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="15dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="300dp"
            android:src="@drawable/login"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLoginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:boxBackgroundColor="#E3E3E3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxBackgroundColor="#E3E3E3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:helperText="Masukan Password Anda !">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="25dp"
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/backgroundColor"
                android:text="@string/login"
                app:cornerRadius="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutLogin"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun" />

        <TextView
            android:id="@+id/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:focusable="true"
            android:text="@string/linkregister"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
